Coninue working on ColdBox - add test for closure in component